# Llama-Flutter

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_FLLAMA_INTEGRATION.md  CONTEXT_AUTO_CLEAR_FIX.md  CONTRIBUTING.md  FLLAMA_COMPARISON.md  LICENSE  LLAMA_FLUTTER_ANDROID_PACKAGE_PLAN.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RESEARCH_COMPARISON_SUMMARY.md  pubspec.yaml
.github/workflows/: build-apk.yml
android/: CMakeLists.txt  build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/write4me/llama_flutter_android/: ChatTemplates.kt  LlamaFlutterAndroidPlugin.kt
android/src/test/kotlin/com/example/llama_flutter_android/: LlamaFlutterAndroidPluginTest.kt
android/src/test/kotlin/com/write4me/llama_flutter_android/: ChatTemplateTest.kt
docs/: USER_GUIDE_CUSTOM_TEMPLATES.md  fllama_comparison_analysis.md  fllama_feature_implementation_plan.md  fllama_improvements_summary.md  fllama_integration_summary.md  technical_documentation.md  todo.md
docs/development/: CHAT_TEMPLATE_ANALYSIS.md  CHAT_TEMPLATE_FIXES_2025_10_08.md  FLLAMA_DEEP_DIVE.md  PHASE_1_COMPLETE.md
docs/guides/: CHAT_TEMPLATES.md  CHAT_TEMPLATE_QUICKSTART.md
documentation/: chagpt_research_result.txt  gemini_research_results.txt  kimi_research_result.txt
example/: README.md  pubspec.yaml
lib/: llama_flutter_android.dart  llama_flutter_android_method_channel.dart  llama_flutter_android_platform_interface.dart
logs/: chatapp_error.txt
test/: llama_flutter_android_method_channel_test.dart  llama_flutter_android_test.dart
(+10 files in other folders)
